--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.4",
     "autoprefixer": "10.4.16",
     "next": "13.5.2",
     "next-themes": "^0.2.1",
@@ -25,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
   }
 }
